--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           (cTribNac).
         </p>
         <p>
-          <span class="section-title">Solução:</span> Não houve
+          <span class="section-title">Solução:</span>
           Correção realizada através da solicitação atualização para release 25.10.60.2
         </p>
         <p>
